# ai-researcher

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  opencode.json  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
.taskmaster/: config.json  config.yaml  state.json
.taskmaster/docs/: prd.txt
.taskmaster/docs/data/: mindmap_table-mitigating_hallucination_in_large_language_models_llms.csv
.taskmaster/docs/prompts/: 0 - Market Intelligence Catalyst (industries and markets).md  0 - Professional Domain Analyst.md  0 - en Digital Product & Workflow Analyst.md  1 - Hierarchical Query Decomposer.md  2 - Targeted Research Dossier Engine.md  3 - Perplexity Research Dossier Engine.md
.taskmaster/docs/references/: perplexity.html
.taskmaster/guidelines/: guidelines_python_dev.md
.taskmaster/tasks/: tasks.json
src/: __init__.py
src/core/: __init__.py  config.py
src/data/: __init__.py
src/engine/: __init__.py
src/utils/: __init__.py
tests/unit/: test_code_quality.py  test_github_workflow.py  test_precommit_config.py  test_pyproject_config.py  test_requirements_dev.py
tests/unit/core/: test_config.py
